; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/netinet/extr_in_arp.c_arp_llreach_use.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/netinet/extr_in_arp.c_arp_llreach_use.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.llinfo_arp = type { i32, i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.llinfo_arp*)* @arp_llreach_use to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @arp_llreach_use(%struct.llinfo_arp* %0) #0 {
  %2 = alloca %struct.llinfo_arp*, align 8
  store %struct.llinfo_arp* %0, %struct.llinfo_arp** %2, align 8
  %3 = load %struct.llinfo_arp*, %struct.llinfo_arp** %2, align 8
  %4 = getelementptr inbounds %struct.llinfo_arp, %struct.llinfo_arp* %3, i32 0, i32 1
  %5 = load i32*, i32** %4, align 8
  %6 = icmp ne i32* %5, null
  br i1 %6, label %7, label %11

7:                                                ; preds = %1
  %8 = call i32 (...) @net_uptime()
  %9 = load %struct.llinfo_arp*, %struct.llinfo_arp** %2, align 8
  %10 = getelementptr inbounds %struct.llinfo_arp, %struct.llinfo_arp* %9, i32 0, i32 0
  store i32 %8, i32* %10, align 8
  br label %11

11:                                               ; preds = %7, %1
  ret void
}

declare dso_local i32 @net_uptime(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
